MDEV-16186 Concatenation operator || returns wrong results in sql_mode=ORACLE