sql/lex.h
@@ -722,7 +722,7 @@ static SYMBOL symbols[] = {
   { "YEAR",		SYM(YEAR_SYM)},
   { "YEAR_MONTH",	SYM(YEAR_MONTH_SYM)},
   { "ZEROFILL",		SYM(ZEROFILL)},
-  { "||",		SYM(OR_OR_SYM)}
+  { "||",		SYM(OR2_SYM)}
 };
 
 
